# DataMiner

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/Algorithms/AlgorithmDecisionTree/: AlgorithmDecisionTree.cpp  AlgorithmDecisionTree.hpp
src/Algorithms/DecisionTree/: DecisionTree.cpp  DecisionTree.hpp
src/Algorithms/DecisionTree/ChiSquare/: DecisionTreeChiSquare.cpp  DecisionTreeChiSquare.hpp
src/Algorithms/DecisionTree/GiniImpurity/: DecisionTreeGiniImpurity.cpp  DecisionTreeGiniImpurity.hpp
src/Algorithms/DecisionTree/InformationGain/: DecisionTreeInformationGain.cpp  DecisionTreeInformationGain.hpp
src/Algorithms/DecisionTree/VarianceReduction/: DecisionTreeVarianceReduction.cpp  DecisionTreeVarianceReduction.hpp
src/Data/: Data.cpp  Data.hpp
src/Logger/: Logger.cpp  Logger.hpp
src/Processor/: Processor.cpp  Processor.hpp  Processors.hpp
src/Task/: Task.cpp  Task.hpp
